/*
 * CDMlib - Cartesian Data Management library
 *
 * Copyright (c) 2013-2014 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

------------------
2014-12-22
Edit parameter OutPutDFI in input file of FCONV
FCONVで出力の際、BOV,SPH,PLOT3Dの形式でdfiファイルを出力できるように、
FCONVの入力ファイルパラメータOutPutDFIについて編集した。

------------------
2014-12-22
Edit class convMx1 and add methods for outputting non-uniform cartesian data 
in classes convOutput_PLOT3D, convOutput_VTK and convOutput_AVS
FCONVのMx1変換において、不等間隔格子の座標データをPLOT3D、VTK、AVS形式で
出力できるようにクラスconvMx1を編集した。
不等間隔格子の座標データの情報は、メソッドmakeGridInfoで生成するようにした。
また、不等間隔格子の座標データ出力に対応したメソッドをPLOT3D、VTK、AVS形式
それぞれで作成(既存のメソッドにオーバーロードして作成)した。

------------------
2014-12-19
Correct a misspelled word in classes CONV and convMx1
クラスCONVとconvMx1において、
DFI_Domian >> DFI_Domain
の訂正を行った。
スペルミスの箇所は対応するところすべてで同じミスをしていたので、
訂正前でもFCONV上の動作に問題はなかった。

------------------
2014-12-18
Edit classes InputParam, convMxM and convMxN to output non-uniform cartesian
 data in AVS format
FCONVを用いてAVS形式の不等間隔格子のデータを出力できるように、
クラスInputParam，convMxM，convMxNを編集した。
また、不等間隔格子の座標データのascii/binary指定はVTK形式では行えず
(フィールドデータと座標データのデータタイプを別々に指定できない)、
AVS形式のみ指定できるので、その点も修正した。

------------------
2014-12-18
Edit class cdm_DFI_AVS to output non-uniform cartesian data
AVS形式で不等間隔格子のデータが出力できるように、クラスcdm_DFI_AVSを編集した。
格子点への補間を行う場合と行わない場合の両方に対応し、補間を行わない
場合はガイドセルも出力できるようにした。
また、cdm_DFI_VTK.h、cdm_DFI_AVS.hのコメント文にsphという文字が存在した
ので、それぞれvtk、avsに訂正した。

------------------
2014-12-17
Edit WriteInit in classes convMxM and convMxN
クラスconvMxMとconvMxN内のWriteInitの部分において、不等間隔格子の
座標データが単精度の場合と倍精度の場合の両方に対応できるようにした。

------------------
2014-12-16
Edit classes InputParam, convMxM and convMxN to output non-uniform cartesian
 data in VTK format
FCONVを用いてVTK形式の不等間隔格子のデータを出力できるように、
クラスInputParam，convMxM，convMxNを編集した。

------------------
2014-12-16
Edit class cdm_DFI_VTK to output non-uniform cartesian data
VTK形式で不等間隔格子のデータが出力できるように、クラスcdm_DFI_VTKを編集した。